feat: joining the landmarks and plane -| to mechanical axis

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                     </div>
 
                 </div>
-                <button class="bg-blue-500 text-white px-4 py-2 rounded-lg w-full mt-6">Update</button>
+                <button id="updateButton"
+                    class="bg-blue-500 text-white px-4 py-2 rounded-lg w-full mt-6">Update</button>
             </div>
 
         </div>
