feat: add loading screen and progress updates for model loading

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                 <button id="updateButton"
                     class="bg-blue-500 text-white px-4 py-2 rounded-lg w-full mt-6">Update</button>
             </div>
+            <div id="loadingScreen"
+                class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 text-white text-2xl font-semibold">
+                Loading Model...
+            </div>
             <div class="pointer-events-auto space-y-4 text-gray-400">
                 <!-- Varus/Valgus Button -->
                 <div class="flex flex items-center justify-between space-x-4">
