--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-    <main class="flex justify-center items-center h-screen relative">
-        <div class="absolute w-screen h-screen md:p-16 flex justify-between items-center pointer-events-none">
+    <main class="flex justify-center items-center h-screen relative bg-black">
+        <div
+            class="absolute w-screen h-screen md:p-16 flex flex-col md:flex-row justify-between items-center pointer-events-none">
             <div class="pointer-events-auto">
                 <div class="bg-gray-800 text-white p-5 rounded-lg shadow-lg space-y-4">
                     <h2 class="text-xl font-semibold">Landmark Creation</h2>
@@ -66,7 +67,7 @@
                 class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 text-white text-2xl font-semibold">
                 Loading Model...
             </div>
-            <div class="pointer-events-auto space-y-4 text-gray-400">
+            <div class="pointer-events-auto space-y-1 md:space-y-4 text-gray-400">
                 <!-- Varus/Valgus Button -->
                 <div class="flex flex items-center justify-between space-x-4">
                     <button id="varus-valgus-decrement"
